testsuite/tests/properties/invalid_analysis_unit_expr/test.out
== foo.lkt ==
foo.lkt:15:36: error: Type AnalysisUnit has no 'foobar' field or property
15 |     fun result(): Bool = node.unit.foobar
   |                                    ^^^^^^


lkt_compile: Done
